--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		</nav>
 
   
-	<div class="container px-3 py-3">
+	<div class="container-fluid px-3 py-3">
         <div class="card o-hidden border-0 shadow-lg"  style="border-radius:10px; background-color:#FFFFF6; ">
             <div class="card-body p-3 m-1" style="overflow: scroll;">
     <label><b>Message</b></label>
