--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 	<br>
    
 	 <div class="row">
-	<div class="col-8">
+	<div class="col">
     <textarea class="form-control" id="mesag" rows="2" placeholder="Write something..."></textarea> 
 	</div>
 
-	<div class="col-1">
+	<div class="col">
     <button id="insrt" class="btn bg-white"><img width="40" height="40" src="send1.png" alt="send"></button>
     </div>
   	</div>
