--- a/index.html
+++ b/index.html
@@ -75,31 +75,31 @@
 
 
 	   <nav class="navbar navbar-expand topbar mb-1 static-top shadow d-flex justify-content-center" style="color:orange; font-family:Segoe Print;  background-color:white">
-		<h1 style="font-weight:900;">CHATAYO</h1>
+		<div><img src="chatayo.png" style="height:100px;"> </img></div>
 		</nav>
 
   
 	<div class="container-fluid px-3 py-3">
         <div class="card o-hidden border-0 shadow-lg"  style="border-radius:10px; background-color:#FFFFF6; ">
             <div class="card-body p-3 m-1" style="overflow: scroll;">
-    <label><b>Message</b></label>
+    <label><b>Messages</b></label>
 	<br><br>
-	<div id="cht">
-	</div>
+	<ul id="cht" class="list-group border-0 fw-bolder">
+	</ul>
 	</div>
 
 
-	<div class="card-body p-3" >
+	<div class="card-body p-3">
 	<label><b>Your Name:</b></label>
-	 <input type="text" id="name" placeholder="Type name.." size="30px" >
+	 <input type="text" id="name" placeholder="Type name.." size="30px" class="m-3">
 	<br>
    
 	 <div class="row">
-	<div class="col">
-    <textarea class="form-control" id="mesag" rows="2" placeholder="Write something..."></textarea> 
+	<div class="col-8">
+    <textarea class="form-control" id="mesag" rows="2" placeholder="Write something..."></textarea>
 	</div>
 
-	<div class="col">
+	<div class="col-1">
     <button id="insrt" class="btn bg-white"><img width="40" height="40" src="send1.png" alt="send"></button>
     </div>
   	</div>
@@ -127,7 +127,8 @@
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" 
         crossorigin="anonymous">
 </script>
-<script src='inputEmoji.js'>
+
+	<script src='inputEmoji.js'>
 </script>
 <script>
 
@@ -198,7 +199,7 @@ onValue(dbRef, (snapshot) => {
   snapshot.forEach((childSnapshot) => {
     const childData = childSnapshot.val();
     // ...
-	const msg = "<li>" + childData.Name + " : " + childData.message + "</li>";
+	const msg = "<li class='list-group-item'>" + childData.Name + " : " + childData.message + "</li>";
 	const chat1 = document.getElementById("cht");
 	chat1.insertAdjacentHTML("afterend", msg);	
   });
