--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 	<div class="card-body p-3">
 	<label><b>Your Name:</b></label>
-	 <input type="text" id="name" placeholder="Type name.." size="30px" class="m-3">
+	 <input type="text" id="name" placeholder="Type name.." size="30px" class="m-3" required>
 	<br>
    
 	 <div class="row">
