--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	</div>
 
 	<div class="col-1">
-    <input type="submit" id="insrt" class="btn bg-white"><img width="40" height="40" src="send1.png" alt="send">
+    <input type="submit" id="insrt" class="btn bg-white"><img width="40" height="40" src="send1.png" alt="send"></input>
     </div>
   	</div>
 	
